--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "react-router-dom": "^4.1.1"
   },
   "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.0",
     "react-scripts": "0.9.5"
   },
   "scripts": {
