--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^15.5.4",
+    "axios": "^0.18.0",
+    "react": "^16.0.0",
     "react-bootstrap": "^0.31.0",
-    "react-dom": "^15.5.4",
+    "react-dom": "^16.4.2",
     "react-router-dom": "^4.1.1"
   },
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-sass": "^3.1.0",
+    "gulp": "^4.0.0",
+    "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.0",
-    "react-scripts": "0.9.5"
+    "react-scripts": "^1.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
