--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "jquery": "^3.3.1",
     "react": "^16.0.0",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^16.4.2",
+    "react-paginate": "^5.2.4",
     "react-router-dom": "^4.1.1"
   },
   "devDependencies": {
